// protoc -I pb/ pb/service.proto --go_out=plugins=grpc:pb

syntax = "proto3";

package pb;

// Commendeer service definition
service Commendeer {
	// rpc CreateAccessCodes (CreateCodeRequest) returns (CreateCodeResponse) {}

	// rpc CreateForm (CreateFormRequest) returns (CreateResponse) {}

	// rpc DownloadUserData (DownloadRequest) returns (DownloadResponse) {}

	// rpc GetFeedbackForm (GetFormRequest) returns (FormResponse) {}

	// Logs user in, creates an authentication code for later authentication
	rpc LoginUser (LoginRequest) returns (LoginResponse) {}

	rpc LogoutUser (LogoutRequest) returns (LogoutResponse) {}

	// rpc SubmitFeedback (PostFeedbackRequest) returns (PostFeedbackResponse) {}

	// rpc ViewResponses (ViewRequest) returns (ViewResponse) {}
}

enum Error {
	NIL = 0;
	OK = 200;
	CREATED = 201;
	ACCEPTED = 202;
	BADREQUEST = 400;
	FORBIDDEN = 403;
	NOTFOUND = 404;
	NOTACCEPTABLE = 406;
	INTERNALERROR = 500;
	SERVICEUNAVAILABLE = 503;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginResponse {
	string username = 1;
	string authcode = 2;
	Error error = 3;
	string errorDetails = 4;
}

message LogoutRequest {
	string authcode = 1;
}

message LogoutResponse {
	Error error = 1;
	string errorDetails = 2;
}